fix mis-alignmen of the text

--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,7 @@ button:hover {
 		display: none;
 	}
 }
+
+.react-timerange-picker__inputGroup__leadingZero {
+	position: relative;
+}
